--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,8 +1,22 @@
-@import url("https://fonts.googleapis.com/css2?family=Hind:wght@400;500;700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Hind:wght@400;500;700&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 * {
-  font-family: "Hind";
+  font-family: 'Hind';
+}
+
+*::-webkit-scrollbar {
+  width: 14px;
+}
+
+*::-webkit-scrollbar-track {
+  background: #ffffff;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: #dddddf;
+  border-radius: 10px;
+  border: 3px solid #ffffff;
 }
